--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>wqf</title>
+  <title>猫狗大战</title>
 <style>
         .name{
             margin-top: 100px;
